@@ -1,17 +1,14 @@
-// AbstractLight.java
 package jmri.implementation;
 
 import java.util.ArrayList;
 import jmri.Light;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /**
  * Abstract class providing partial implementation of the the Light interface.
  * <P>
  * Light objects require a number of instance variables. Since Light objects are
  * created using the standard JMRI systemName/userName concept, accessor
- * routines are provided for setting and editting these instance variables.
+ * routines are provided for setting and editing these instance variables.
  * <P>
  * Each Light may have one or more control mechanisms, of the types defined in
  * the Light interface. A Light may also not have any control mechanisms
@@ -41,16 +38,9 @@ import org.slf4j.LoggerFactory;
  * @author	Dave Duchamp Copyright (C) 2004, 2010
  * @author	Ken Cameron Copyright (C) 2008
  * @author	Bob Jacobsen Copyright (C) 2008
- * @version $Revision$
  */
 public abstract class AbstractLight extends AbstractNamedBean
         implements Light, java.io.Serializable {
-
-    /**
-     *
-     */
-    private static final long serialVersionUID = -3863736856456563301L;
-    private final static Logger log = LoggerFactory.getLogger(AbstractLight.class);
 
     public AbstractLight(String systemName, String userName) {
         super(systemName.toUpperCase(), userName);
@@ -60,6 +50,7 @@ public abstract class AbstractLight extends AbstractNamedBean
         super(systemName.toUpperCase());
     }
 
+    @Override
     public String getBeanType() {
         return Bundle.getMessage("BeanNameLight");
     }
@@ -67,7 +58,7 @@ public abstract class AbstractLight extends AbstractNamedBean
     /**
      * System independent instance variables (saved between runs)
      */
-    protected ArrayList<LightControl> lightControlList = new ArrayList<LightControl>();
+    protected ArrayList<LightControl> lightControlList = new ArrayList<>();
     protected double mMaxIntensity = 1.0;
     protected double mMinIntensity = 0.0;
 
@@ -82,14 +73,18 @@ public abstract class AbstractLight extends AbstractNamedBean
 
     /**
      * Get enabled status
+     * @return enabled status
      */
+    @Override
     public boolean getEnabled() {
         return mEnabled;
     }
 
     /**
      * Set enabled status
+     * @param v status to set
      */
+    @Override
     public void setEnabled(boolean v) {
         boolean old = mEnabled;
         mEnabled = v;
@@ -105,6 +100,7 @@ public abstract class AbstractLight extends AbstractNamedBean
      *         intensity. See e.g. {@link AbstractVariableLight} for an abstract
      *         implementation of variable intensity.
      */
+    @Override
     public boolean isIntensityVariable() {
         return false;
     }
@@ -124,11 +120,13 @@ public abstract class AbstractLight extends AbstractNamedBean
      * All others result in an exception, instead of the INTERMEDIATE state,
      * because this class does not implement analog intensity
      * <P>
+     * @param intensity target intensity value
      * @throws IllegalArgumentException when intensity is less than 0.0 or more
      *                                  than 1.0
      * @throws IllegalArgumentException when intensity is more than MinIntensity
      *                                  and less than MaxIntensity
      */
+    @Override
     public void setTargetIntensity(double intensity) {
         if (log.isDebugEnabled()) {
             log.debug("setTargetIntensity " + intensity);
@@ -160,6 +158,7 @@ public abstract class AbstractLight extends AbstractNamedBean
      * minimum.
      * <p>
      * Does not change state.
+     * @param intensity low intensity value
      */
     protected void updateIntensityLow(double intensity) {
         notifyTargetIntensityChange(intensity);
@@ -171,6 +170,7 @@ public abstract class AbstractLight extends AbstractNamedBean
      * max
      * <p>
      * Does not change state.
+     * @param intensity intermediate intensity value
      */
     protected void updateIntensityIntermediate(double intensity) {
         // not in value range!
@@ -182,6 +182,7 @@ public abstract class AbstractLight extends AbstractNamedBean
      * maximum
      * <p>
      * Does not change state.
+     * @param intensity high intensity value
      */
     protected void updateIntensityHigh(double intensity) {
         notifyTargetIntensityChange(intensity);
@@ -194,7 +195,9 @@ public abstract class AbstractLight extends AbstractNamedBean
      * <p>
      * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
      * full on.
+     * @return current intensity
      */
+    @Override
     public double getCurrentIntensity() {
         return mCurrentIntensity;
     }
@@ -208,7 +211,9 @@ public abstract class AbstractLight extends AbstractNamedBean
      * full on.
      * <p>
      * Bound property
+     * @return target intensity
      */
+    @Override
     public double getTargetIntensity() {
         return mCurrentIntensity;
     }
@@ -221,13 +226,15 @@ public abstract class AbstractLight extends AbstractNamedBean
      * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
      * full on.
      *
+     * @param intensity max intensity
      * @throws IllegalArgumentException when intensity is less than 0.0 or more
      *                                  than 1.0
      * @throws IllegalArgumentException when intensity is not greater than the
      *                                  current value of the minIntensity
      *                                  property
      */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY", justification = "OK to compare floating point")
+    @Override
     public void setMaxIntensity(double intensity) {
         if (intensity < 0.0 || intensity > 1.0) {
             throw new IllegalArgumentException("Illegal intensity value: " + intensity);
@@ -240,7 +247,7 @@ public abstract class AbstractLight extends AbstractNamedBean
         mMaxIntensity = intensity;
 
         if (oldValue != intensity) {
-            firePropertyChange("MaxIntensity", new Double(oldValue), new Double(intensity));
+            firePropertyChange("MaxIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
         }
     }
 
@@ -249,7 +256,9 @@ public abstract class AbstractLight extends AbstractNamedBean
      * <p>
      * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
      * full on.
+     * @return max intensity
      */
+    @Override
     public double getMaxIntensity() {
         return mMaxIntensity;
     }
@@ -262,13 +271,15 @@ public abstract class AbstractLight extends AbstractNamedBean
      * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
      * full on.
      *
+     * @param intensity intensity value
      * @throws IllegalArgumentException when intensity is less than 0.0 or more
      *                                  than 1.0
      * @throws IllegalArgumentException when intensity is not less than the
      *                                  current value of the maxIntensity
      *                                  property
      */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY", justification = "OK to compare floating point")
+    @Override
     public void setMinIntensity(double intensity) {
         if (intensity < 0.0 || intensity > 1.0) {
             throw new IllegalArgumentException("Illegal intensity value: " + intensity);
@@ -281,7 +292,7 @@ public abstract class AbstractLight extends AbstractNamedBean
         mMinIntensity = intensity;
 
         if (oldValue != intensity) {
-            firePropertyChange("MinIntensity", new Double(oldValue), new Double(intensity));
+            firePropertyChange("MinIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
         }
     }
 
@@ -290,7 +301,9 @@ public abstract class AbstractLight extends AbstractNamedBean
      * <p>
      * A value of 0.0 corresponds to full off, and a value of 1.0 corresponds to
      * full on.
+     * @return min intensity value
      */
+    @Override
     public double getMinIntensity() {
         return mMinIntensity;
     }
@@ -303,7 +316,9 @@ public abstract class AbstractLight extends AbstractNamedBean
      * intensity level to another.
      * <p>
      * Unbound property
+     * @return transition availability
      */
+    @Override
     public boolean isTransitionAvailable() {
         return false;
     }
@@ -317,8 +332,10 @@ public abstract class AbstractLight extends AbstractNamedBean
      * <p>
      * Bound property
      * <p>
+     * @param minutes transition duration
      * @throws IllegalArgumentException if minutes is not 0.0
      */
+    @Override
     public void setTransitionTime(double minutes) {
         if (minutes != 0.0) {
             throw new IllegalArgumentException("Illegal transition time: " + minutes);
@@ -331,6 +348,7 @@ public abstract class AbstractLight extends AbstractNamedBean
      * <p>
      * @return 0.0 if the output intensity transition is instantaneous
      */
+    @Override
     public double getTransitionTime() {
         return 0.0;
     }
@@ -341,7 +359,9 @@ public abstract class AbstractLight extends AbstractNamedBean
      * <p>
      * Bound property so that listeners can conveniently learn when the
      * transition is over.
+     * @return is transitioning
      */
+    @Override
     public boolean isTransitioning() {
         return false;
     }
@@ -349,7 +369,9 @@ public abstract class AbstractLight extends AbstractNamedBean
     /**
      * Handle a request for a state change. For these lights, ON and OFF just
      * transition immediately between MinIntensity and MaxIntensity
+     * @param newState new state
      */
+    @Override
     public void setState(int newState) {
         if (log.isDebugEnabled()) {
             log.debug("setState " + newState + " was " + mState);
@@ -382,19 +404,22 @@ public abstract class AbstractLight extends AbstractNamedBean
     /**
      * Change the stored target intensity value and do notification, but don't
      * change anything in the hardware
+     * @param intensity intensity value
      */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY", justification = "OK to compare floating point")
     protected void notifyTargetIntensityChange(double intensity) {
         double oldValue = mCurrentIntensity;
         mCurrentIntensity = intensity;
         if (oldValue != intensity) {
-            firePropertyChange("TargetIntensity", new Double(oldValue), new Double(intensity));
+            firePropertyChange("TargetIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
         }
     }
 
     /**
      * Change the stored state value and do notification, but don't change
      * anything in the hardware
+     * @param oldState old value
+     * @param newState new value
      */
     protected void notifyStateChange(int oldState, int newState) {
         mState = newState;
@@ -405,10 +430,13 @@ public abstract class AbstractLight extends AbstractNamedBean
 
     /**
      * Implement the specific change of state needed by hardware
+     * @param oldState old state
+     * @param newState new state
      */
     protected void doNewState(int oldState, int newState) {
     }
 
+    @Override
     public int getState() {
         return mState;
     }
@@ -416,23 +444,23 @@ public abstract class AbstractLight extends AbstractNamedBean
     /**
      * Activates a light activating all its LightControl objects.
      */
+    @Override
     public void activateLight() {
-        for (int i = 0; i < lightControlList.size(); i++) {
-            LightControl lc = lightControlList.get(i);
+        lightControlList.stream().forEach((lc) -> {
             lc.activateLightControl();
-        }
+        });
     }
 
     /**
      * Deactivates a light by deactivating each of its LightControl objects.
      */
+    @Override
     public void deactivateLight() {
         // skip if Light is not active
         if (mActive) {
-            for (int i = 0; i < lightControlList.size(); i++) {
-                LightControl lc = lightControlList.get(i);
+            lightControlList.stream().forEach((lc) -> {
                 lc.deactivateLightControl();
-            }
+            });
             mActive = false;
         }
     }
@@ -440,6 +468,7 @@ public abstract class AbstractLight extends AbstractNamedBean
     /**
      * LightControl management methods
      */
+    @Override
     public void clearLightControls() {
         // deactivate all Light Controls if any are active
         deactivateLight();
@@ -449,18 +478,19 @@ public abstract class AbstractLight extends AbstractNamedBean
         }
     }
 
+    @Override
     public void addLightControl(jmri.implementation.LightControl c) {
         lightControlList.add(c);
     }
 
+    @Override
     public ArrayList<LightControl> getLightControlList() {
-        ArrayList<LightControl> listCopy = new ArrayList<LightControl>();
-        for (int i = 0; i < lightControlList.size(); i++) {
-            listCopy.add(lightControlList.get(i));
-        }
+        ArrayList<LightControl> listCopy = new ArrayList<>();
+        lightControlList.stream().forEach((lightControlList1) -> {
+            listCopy.add(lightControlList1);
+        });
         return listCopy;
     }
 
+    private final static org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(AbstractLight.class);
 }
-
-/* @(#)AbstractLight.java */
