@@ -1,4 +1,3 @@
-// AbstractTurnout.java
 package jmri.implementation;
 
 import jmri.InstanceManager;
@@ -35,15 +34,9 @@ import org.slf4j.LoggerFactory;
  * <P>
  *
  * @author Bob Jacobsen Copyright (C) 2001, 2009
- * @version $Revision$
  */
 public abstract class AbstractTurnout extends AbstractNamedBean implements
         Turnout, java.io.Serializable, java.beans.PropertyChangeListener {
-
-    /**
-     *
-     */
-    private static final long serialVersionUID = -1138214787466499528L;
 
     protected AbstractTurnout(String systemName) {
         super(systemName.toUpperCase());
@@ -53,9 +46,13 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         super(systemName.toUpperCase(), userName);
     }
 
+    @Override
     public String getBeanType() {
         return Bundle.getMessage("BeanNameTurnout");
     }
+
+    private String closedText = InstanceManager.turnoutManagerInstance().getClosedText();
+    private String thrownText = InstanceManager.turnoutManagerInstance().getThrownText();
 
     /**
      * Handle a request to change state, typically by sending a message to the
@@ -80,6 +77,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * Sets a new Commanded state, if need be notifying the listeners, but does
      * NOT send the command downstream. This is used when a new commanded state
      * is noticed from another command.
+     * @param s new state
      */
     protected void newCommandedState(int s) {
         if (_commandedState != s) {
@@ -90,6 +88,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         }
     }
 
+    @Override
     public int getKnownState() {
         return _knownState;
     }
@@ -99,10 +98,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * appropriate starts a TurnoutOperator to do its thing. If there is no
      * TurnoutOperator (not required or nothing suitable) then just tell the
      * layout and hope for the best.
+     * @param s commanded state to set
      */
+    @Override
     public void setCommandedState(int s) {
-        log.debug("set commanded state for turnout " + getSystemName() + " to "
-                + s);
+        log.debug("set commanded state for turnout {} to {}", getFullyFormattedDisplayName(),
+                (s==Turnout.CLOSED ? closedText : thrownText));
         newCommandedState(s);
         myOperator = getTurnoutOperator(); // MUST set myOperator before starting the thread
         if (myOperator == null) {
@@ -116,6 +117,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         }
     }
 
+    @Override
     public int getCommandedState() {
         return _commandedState;
     }
@@ -162,6 +164,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * @return	true iff state is a valid one and the known state is the same as
      *         commanded
      */
+    @Override
     public boolean isConsistentState() {
         return _commandedState == _knownState
                 && (_commandedState == CLOSED || _commandedState == THROWN);
@@ -184,7 +187,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * <P>
      * Note that getState() and setState(int) are not symmetric: getState is the
      * known state, and set state modifies the commanded state.
+     * @param s new state
      */
+    @Override
     public void setState(int s) {
         setCommandedState(s);
     }
@@ -197,7 +202,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * <P>
      * Note that getState() and setState(int) are not symmetric: getState is the
      * known state, and set state modifies the commanded state.
+     * @return current state
      */
+    @Override
     public int getState() {
         return getKnownState();
     }
@@ -221,31 +228,38 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     private int _controlType = 0;
 
     /* Type of turnout control - defaults to 0 for 'steady state' */
+    @Override
     public int getNumberOutputBits() {
         return _numberOutputBits;
     }
 
+    @Override
     public void setNumberOutputBits(int num) {
         _numberOutputBits = num;
     }
 
+    @Override
     public int getControlType() {
         return _controlType;
     }
 
+    @Override
     public void setControlType(int num) {
         _controlType = num;
     }
 
+    @Override
     public int getValidFeedbackTypes() {
         return _validFeedbackTypes;
     }
 
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "EI_EXPOSE_REP") // OK until Java 1.6 allows return of cheap array copy
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "EI_EXPOSE_REP", justification = "OK until Java 1.6 allows return of cheap array copy")
+    @Override
     public String[] getValidFeedbackNames() {
         return _validFeedbackNames;
     }
 
+    @Override
     public void setFeedbackMode(String mode) throws IllegalArgumentException {
         for (int i = 0; i < _validFeedbackNames.length; i++) {
             if (mode.equals(_validFeedbackNames[i])) {
@@ -256,6 +270,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         throw new IllegalArgumentException("Unexpected mode: " + mode);
     }
 
+    @Override
     public void setFeedbackMode(int mode) throws IllegalArgumentException {
         // check for error - following removed the low bit from mode
         int test = mode & (mode - 1);
@@ -273,10 +288,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         setLocked(CABLOCKOUT, false);
     }
 
+    @Override
     public int getFeedbackMode() {
         return _activeFeedbackType;
     }
 
+    @Override
     public String getFeedbackModeName() {
         for (int i = 0; i < _validFeedbackNames.length; i++) {
             if (_activeFeedbackType == _validFeedbackModes[i]) {
@@ -287,6 +304,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 + _activeFeedbackType);
     }
 
+    @Override
     public void setInverted(boolean inverted) {
         boolean oldInverted = _inverted;
         _inverted = inverted;
@@ -309,7 +327,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * <P>
      * Used in polling loops in system-specific code, so made final to allow
      * optimization.
+     * @return inverted status
      */
+    @Override
     final public boolean getInverted() {
         return _inverted;
     }
@@ -319,7 +339,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     /**
      * Determine if the turnouts can be inverted. If true inverted turnouts
      * supported.
+     * @return invert supported
      */
+    @Override
     public boolean canInvert() {
         return false;
     }
@@ -332,11 +354,15 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * state. Turnout that have local buttons can also be locked if their
      * decoder supports it.
      *
-     * @param locked
+     * @param turnoutLockout lockout state to monitor. Possible values
+     *                       {@link #CABLOCKOUT}, {@link #PUSHBUTTONLOCKOUT}.
+     *                       Can be combined to monitor both states.
+     * @param locked         true if turnout to be locked
      */
+    @Override
     public void setLocked(int turnoutLockout, boolean locked) {
         boolean firechange = false;
-        if ((turnoutLockout & CABLOCKOUT) > 0 && _cabLockout != locked) {
+        if ((turnoutLockout & CABLOCKOUT) != 0 && _cabLockout != locked) {
             firechange = true;
             if (canLock(CABLOCKOUT)) {
                 _cabLockout = locked;
@@ -344,7 +370,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 _cabLockout = false;
             }
         }
-        if ((turnoutLockout & PUSHBUTTONLOCKOUT) > 0
+        if ((turnoutLockout & PUSHBUTTONLOCKOUT) != 0
                 && _pushButtonLockout != locked) {
             firechange = true;
             if (canLock(PUSHBUTTONLOCKOUT)) {
@@ -364,7 +390,10 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     /**
      * Determine if turnout is locked. Returns true if turnout is locked. There
      * are two types of locks, cab lockout, and pushbutton lockout.
+     * @param turnoutLockout turnout to check
+     * @return locked state
      */
+    @Override
     public boolean getLocked(int turnoutLockout) {
         if (turnoutLockout == CABLOCKOUT) {
             return _cabLockout;
@@ -386,10 +415,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
 
     protected boolean _enablePushButtonLockout = false;
 
+    @Override
     public boolean canLock(int turnoutLockout) {
         return false;
     }
 
+    @Override
     public void enableLockOperation(int turnoutLockout, boolean enabled) {
     }
 
@@ -397,7 +428,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * When true, report to console anytime a cab attempts to change the state
      * of a turnout on the layout. When a turnout is cab locked, only JMRI is
      * allowed to change the state of a turnout.
+     * @param reportLocked report locked state
      */
+    @Override
     public void setReportLocked(boolean reportLocked) {
         boolean oldReportLocked = _reportLocked;
         _reportLocked = reportLocked;
@@ -411,7 +444,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * When true, report to console anytime a cab attempts to change the state
      * of a turnout on the layout. When a turnout is cab locked, only JMRI is
      * allowed to change the state of a turnout.
+     * @return report locked state
      */
+    @Override
     public boolean getReportLocked() {
         return _reportLocked;
     }
@@ -424,7 +459,8 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     protected String[] _validDecoderNames = PushbuttonPacket
             .getValidDecoderNames();
 
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "EI_EXPOSE_REP") // OK until Java 1.6 allows return of cheap array copy
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "EI_EXPOSE_REP", justification = "OK until Java 1.6 allows return of cheap array copy")
+    @Override
     public String[] getValidDecoderNames() {
         return _validDecoderNames;
     }
@@ -432,10 +468,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     // set the turnout decoder default to unknown
     protected String _decoderName = PushbuttonPacket.unknown;
 
+    @Override
     public String getDecoderName() {
         return _decoderName;
     }
 
+    @Override
     public void setDecoderName(String decoderName) {
         _decoderName = decoderName;
     }
@@ -459,10 +497,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         return myOperator;
     }
 
+    @Override
     public TurnoutOperation getTurnoutOperation() {
         return myTurnoutOperation;
     }
 
+    @Override
     public void setTurnoutOperation(TurnoutOperation toper) {
         if (log.isDebugEnabled()) {
             log.debug("setTurnoutOperation Called for turnout {}.  Operation type {}", this.getSystemName(), toper);
@@ -486,10 +526,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         }
     }
 
+    @Override
     public boolean getInhibitOperation() {
         return inhibitOperation;
     }
 
+    @Override
     public void setInhibitOperation(boolean io) {
         inhibitOperation = io;
     }
@@ -537,18 +579,14 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     //Sensor getSecondSensor() = null;
     private NamedBeanHandle<Sensor> _secondNamedSensor;
 
+    @Override
     public void provideFirstFeedbackSensor(String pName) throws jmri.JmriException {
         if (InstanceManager.sensorManagerInstance() != null) {
             if (pName == null || pName.equals("")) {
                 provideFirstFeedbackNamedSensor(null);
             } else {
                 Sensor sensor = InstanceManager.sensorManagerInstance().provideSensor(pName);
-                if (sensor != null) {
-                    provideFirstFeedbackNamedSensor(jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, sensor));
-                } else {
-                    log.error("Sensor '" + pName + "' not available");
-                    throw new jmri.JmriException("Sensor '" + pName + "' not available");
-                }
+                provideFirstFeedbackNamedSensor(jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, sensor));
             }
         } else {
             log.error("No SensorManager for this protocol");
@@ -570,6 +608,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
 
     }
 
+    @Override
     public Sensor getFirstSensor() {
         if (_firstNamedSensor == null) {
             return null;
@@ -577,22 +616,19 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         return _firstNamedSensor.getBean();
     }
 
+    @Override
     public NamedBeanHandle<Sensor> getFirstNamedSensor() {
         return _firstNamedSensor;
     }
 
+    @Override
     public void provideSecondFeedbackSensor(String pName) throws jmri.JmriException {
         if (InstanceManager.sensorManagerInstance() != null) {
             if (pName == null || pName.equals("")) {
                 provideSecondFeedbackNamedSensor(null);
             } else {
                 Sensor sensor = InstanceManager.sensorManagerInstance().provideSensor(pName);
-                if (sensor != null) {
-                    provideSecondFeedbackNamedSensor(jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, sensor));
-                } else {
-                    log.error("Sensor '" + pName + "' not available");
-                    throw new jmri.JmriException("Sensor '" + pName + "' not available");
-                }
+                provideSecondFeedbackNamedSensor(jmri.InstanceManager.getDefault(jmri.NamedBeanHandleManager.class).getNamedBeanHandle(pName, sensor));
             }
         } else {
             log.error("No SensorManager for this protocol");
@@ -614,6 +650,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         }
     }
 
+    @Override
     public Sensor getSecondSensor() {
         if (_secondNamedSensor == null) {
             return null;
@@ -621,10 +658,12 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         return _secondNamedSensor.getBean();
     }
 
+    @Override
     public NamedBeanHandle<Sensor> getSecondNamedSensor() {
         return _secondNamedSensor;
     }
 
+    @Override
     public void setInitialKnownStateFromFeedback() {
         if (_activeFeedbackType == ONESENSOR) {
             // ONESENSOR feedback 
@@ -671,6 +710,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      * React to sensor changes by changing the KnownState if using an
      * appropriate sensor mode
      */
+    @Override
     public void propertyChange(java.beans.PropertyChangeEvent evt) {
         if (evt.getSource() == myTurnoutOperation) {
             operationPropertyChange(evt);
@@ -728,11 +768,13 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         }
     }
 
+    @Override
     public void setBinaryOutput(boolean state) {
         binaryOutput = true;
     }
     protected boolean binaryOutput = false;
 
+    @Override
     public void dispose() {
         if (getFirstSensor() != null) {
             getFirstSensor().removePropertyChangeListener(this);
@@ -750,8 +792,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     //boolean useBlockSpeed = true;
 
     //float speedThroughTurnout = 0;
+    @Override
     public float getDivergingLimit() {
-        if ((_divergeSpeed == null) || (_divergeSpeed == "")) {
+        if ((_divergeSpeed == null) || (_divergeSpeed.equals(""))) {
             return -1;
         }
 
@@ -763,18 +806,19 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
             return -1;
         }
         try {
-            return new Float(speed);
+            return Float.valueOf(speed);
             //return Integer.parseInt(_blockSpeed);
         } catch (NumberFormatException nx) {
             //considered normal if the speed is not a number.
         }
         try {
-            return jmri.implementation.SignalSpeedMap.getMap().getSpeed(speed);
+            return jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(speed);
         } catch (Exception ex) {
             return -1;
         }
     }
 
+    @Override
     public String getDivergingSpeed() {
         if (_divergeSpeed.equals("Global")) {
             return ("Use Global " + InstanceManager.turnoutManagerInstance().getDefaultThrownSpeed());
@@ -785,6 +829,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         return _divergeSpeed;
     }
 
+    @Override
     public void setDivergingSpeed(String s) throws JmriException {
         if (s == null) {
             throw new JmriException("Value of requested turnout thrown speed can not be null");
@@ -801,7 +846,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 Float.parseFloat(s);
             } catch (NumberFormatException nx) {
                 try {
-                    jmri.implementation.SignalSpeedMap.getMap().getSpeed(s);
+                    jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(s);
                 } catch (Exception ex) {
                     throw new JmriException("Value of requested block speed is not valid");
                 }
@@ -812,28 +857,31 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         firePropertyChange("TurnoutDivergingSpeedChange", oldSpeed, s);
     }
 
+    @Override
     public float getStraightLimit() {
-        if ((_straightSpeed == null) || (_straightSpeed == "")) {
+        if ((_straightSpeed == null) || (_straightSpeed.equals(""))) {
             return -1;
         }
         String speed = _straightSpeed;
         if (_straightSpeed.equals("Global")) {
             speed = InstanceManager.turnoutManagerInstance().getDefaultClosedSpeed();
-        } else if (speed.equals("Block")) {
+        }
+        if (speed.equals("Block")) {
             return -1;
         }
         try {
-            return new Float(speed);
+            return Float.valueOf(speed);
         } catch (NumberFormatException nx) {
             //considered normal if the speed is not a number.
         }
         try {
-            return jmri.implementation.SignalSpeedMap.getMap().getSpeed(speed);
+            return jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(speed);
         } catch (Exception ex) {
             return -1;
         }
     }
 
+    @Override
     public String getStraightSpeed() {
         if (_straightSpeed.equals("Global")) {
             return ("Use Global " + InstanceManager.turnoutManagerInstance().getDefaultClosedSpeed());
@@ -844,6 +892,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         return _straightSpeed;
     }
 
+    @Override
     public void setStraightSpeed(String s) throws JmriException {
         if (s == null) {
             throw new JmriException("Value of requested turnout straight speed can not be null");
@@ -860,7 +909,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 Float.parseFloat(s);
             } catch (NumberFormatException nx) {
                 try {
-                    jmri.implementation.SignalSpeedMap.getMap().getSpeed(s);
+                    jmri.InstanceManager.getDefault(SignalSpeedMap.class).getSpeed(s);
                 } catch (Exception ex) {
                     throw new JmriException("Value of requested turnout straight speed is not valid");
                 }
@@ -871,6 +920,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
         firePropertyChange("TurnoutStraightSpeedChange", oldSpeed, s);
     }
 
+    @Override
     public void vetoableChange(java.beans.PropertyChangeEvent evt) throws java.beans.PropertyVetoException {
         if ("CanDelete".equals(evt.getPropertyName())) { //IN18N
             if (evt.getOldValue().equals(getFirstSensor()) || evt.getOldValue().equals(getSecondSensor())) {
@@ -878,11 +928,9 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 throw new java.beans.PropertyVetoException(Bundle.getMessage("InUseSensorTurnoutVeto", getDisplayName()), e); //IN18N
             }
         } else if ("DoDelete".equals(evt.getPropertyName())) {
-            //log.info("Call to do delete"); //IN18N
+            log.warn("No clean DoDelete worked for {}", getSystemName()); //IN18N
         }
     }
 
     private final static Logger log = LoggerFactory.getLogger(AbstractTurnout.class.getName());
 }
-
-/* @(#)AbstractTurnout.java */
